templates/my-books-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-books-service
  name: my-books-service
spec:
  type: NodePort
  selector:
    app: my-books-service
  ports:
    - name: 8080-31000
      nodePort: 31000
      port: 8080
      protocol: TCP
      targetPort: 8080
