templates/backend-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              backend-network: "true"
  podSelector:
    matchLabels:
      backend-network: "true"
